# hyper-mcp

./: .pre-commit-config.yaml  CREATING_PLUGINS.md  Cargo.toml  Dockerfile  README.md  RUNTIME_CONFIG.md  config.example.json  config.example.yaml  plugin-schema.json  plugin-schema.yaml  rust-toolchain.toml  xtp-plugin-schema.json
.github/workflows/: ci.yml  nightly.yml  release.yml
examples/plugins/eval-py/: README.md
examples/plugins/list-changed/: Cargo.toml  Dockerfile  README.md  list_changed.wasm
examples/plugins/list-changed/src/: lib.rs  pdk.rs
examples/plugins/tool-list-changed/: README.md
examples/plugins/v2/rstime/: Dockerfile  README.md  prepare.sh  rstime.wasm  xtp.toml
examples/plugins/v2/rstime/src/: lib.rs  pdk.rs
examples/plugins/v2/rstime/src/pdk/: types.rs
src/: config.rs  main.rs  oci.rs  plugin.rs  plugins.rs  service.rs
src/wasm/: s3.rs
templates/plugins/: README.md
templates/plugins/go/: Dockerfile  README.md  go.mod  go.sum  main.go  types.go
templates/plugins/rust/src/pdk/: types.rs
tests/fixtures/: cross_plugin_tools_config.json  cross_plugin_tools_config.yaml  valid_config.json  valid_config.yaml
tests/integrations/: CI_INTEGRATION.md  README.md  WRAPPER_PLUGIN_USAGE.md  mcp_call.py  test_wrapper_plugin.sh  wrapper_plugin_test_config.json  wrapper_plugin_test_config.yaml
tests/integrations/wrapper-plugin/: .gitignore  Cargo.toml  Dockerfile  README.md
tests/integrations/wrapper-plugin/.cargo/: config.toml
tests/integrations/wrapper-plugin/src/: lib.rs
